@@ -4,7 +4,6 @@ TODO
 Required for alpha 5
 --------------------
 
- - Implement tab completion of paths at MMBasic prompt
  - Support "long lines" at the MMBasic prompt
  - Add PicoMite EDITor implementation
    - and add support for "long lines" to it
