@@ -2,6 +2,10 @@ ChangeLog
 ---------
 
 Version 2022.01.00-a5 - ??-???-2022:
+  - Added "automatic path completion" to the MMBasic prompt. Pressing TAB
+    will attempt to complete (as far as can be unambiguously determined) a
+    filename that the user is typing at the prompt, or sound the console bell
+    if no completion is possible.
   - Changed MMBasic prompt so that you can access the history with the up
     and down cursors even after you start typing a command.
   - Changed RUN file$ so that it is not necessary for file$ to have a ".bas"
